# multi_face_tracker

./: CMakeLists.txt  README.md  package.xml
action/: FaceDetection.action
include/: head_pose_estimation.hpp
launch/: usbcam_demo.launch  video_demo.launch
src/: face_ctrl.cpp  face_detection.cpp  head_pose_estimation.cpp
